--- a/gym-app/package.json
+++ b/gym-app/package.json
@@ -9,6 +9,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "bootstrap": "^5.3.2",
+    "react-bootstrap": "^2.10.1",
+    "react-router-dom": "^6.22.1",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
     "workbox-broadcast-update": "^6.6.0",
